[package]
name = 'secret-social-recovery'
version = '2.0.0-alpha.3'
authors = ['hupeng <bitrocks.hu@gmail.com>']
description = 'A Substrate FRAME pallet for Secret Social Recovery(PoC)'
repository = "https://github.com/bitrocks/secret-social-recovery"
readme = "README.md"
edition = '2018'
homepage = 'https://substrate.dev'
license = 'MIT'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
branch = 'hack'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
branch = 'hack'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
branch = 'hack'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
branch = 'hack'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
branch = 'hack'

[dependencies.system]
default-features = false
git = 'https://github.com/bitrocks/substrate.git'
package = 'frame-system'
branch = 'hack'

[dev-dependencies.pallet-balances]
git = 'https://github.com/bitrocks/substrate.git'
package = 'pallet-balances'
branch = 'hack'


[dependencies.merkle]
git = 'https://github.com/bitrocks/merkle.rs'
rev = 'e2546f04c2592f13a394134261e79fd562a99fa4'


[dependencies.ring]
version = "^0.16.1"
